<resources>
    <string name="app_name">Bitcoin WP</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title_0">Bitcoin: A Peer-to-Peer Electronic Cash System</string>
    <string name="text_0_0">Satoshi Nakamoto\nsatoshin@gmx.com\nnwww.bitcoin.org</string>
    <string name="text_0_1">\tAbstract. A purely peer-to-peer version of electronic cash would allow online payments to be sent directly from one party to another without going through a financial institution. Digital signatures provide part of the solution, but the main benefits are lost if a trusted third party is still required to prevent double-spending. We propose a solution to the double-spending problem using a peer-to-peer network. The network timestamps transactions by hashing them into an ongoing chain of hash-based proof-of-work, forming a record that cannot be changed without redoing the proof-of-work. The longest chain not only serves as proof of the sequence of events witnessed, but proof that it came from the largest pool of CPU power. As long as a majority of CPU power is controlled by nodes that are not cooperating to attack the network, they\'ll generate the longest chain and outpace attackers. The network itself requires minimal structure. Messages are broadcast on a best effort basis, and nodes can leave and rejoin the network at will, accepting the longest proof-of-work chain as proof of what happened while they were gone.</string>
    <string name="title_1">1. Introduction</string>
    <string name="text_1">\tCommerce on the Internet has come to rely almost exclusively on financial institutions serving as trusted third parties to process electronic payments. While the system works well enough for most transactions, it still suffers from the inherent weaknesses of the trust based model. Completely non-reversible transactions are not really possible, since financial institutions cannot avoid mediating disputes. The cost of mediation increases transaction costs, limiting the minimum practical transaction size and cutting off the possibility for small casual transactions, and there is a broader cost in the loss of ability to make non-reversible payments for nonreversible services. With the possibility of reversal, the need for trust spreads. Merchants must be wary of their customers, hassling them for more information than they would otherwise need. A certain percentage of fraud is accepted as unavoidable. These costs and payment uncertainties can be avoided in person by using physical currency, but no mechanism exists to make payments over a communications channel without a trusted party. \n\tWhat is needed is an electronic payment system based on cryptographic proof instead of trust, allowing any two willing parties to transact directly with each other without the need for a trusted third party. Transactions that are computationally impractical to reverse would protect sellers from fraud, and routine escrow mechanisms could easily be implemented to protect buyers. In this paper, we propose a solution to the double-spending problem using a peer-to-peer distributed timestamp server to generate computational proof of the chronological order of transactions. The system is secure as long as honest nodes collectively control more CPU power than any cooperating group of attacker nodes.</string>
    <string name="text_2_0">\tWe define an electronic coin as a chain of digital signatures. Each owner transfers the coin to the next by digitally signing a hash of the previous transaction and the public key of the next owner and adding these to the end of the coin. A payee can verify the signatures to verify the chain of ownership.</string>
    <string name="text_2_1">\tThe problem of course is the payee can\'t verify that one of the owners did not double-spend the coin. A common solution is to introduce a trusted central authority, or mint, that checks every transaction for double spending. After each transaction, the coin must be returned to the mint to issue a new coin, and only coins issued directly from the mint are trusted not to be double-spent. The problem with this solution is that the fate of the entire money system depends on the company running the mint, with every transaction having to go through them, just like a bank. \n\tWe need a way for the payee to know that the previous owners did not sign any earlier transactions. For our purposes, the earliest transaction is the one that counts, so we don\'t care about later attempts to double-spend. The only way to confirm the absence of a transaction is to be aware of all transactions. In the mint based model, the mint was aware of all transactions and decided which arrived first. To accomplish this without a trusted party, transactions must be publicly announced [1], and we need a system for participants to agree on a single history of the order in which they were received. The payee needs proof that at the time of each transaction, the majority of nodes agreed it was the first received.</string>
    <string name="title_2">2. Transactions</string>
    <string name="text_3">\tThe solution we propose begins with a timestamp server. A timestamp server works by taking a hash of a block of items to be timestamped and widely publishing the hash, such as in a newspaper or Usenet post [2-5]. The timestamp proves that the data must have existed at the time, obviously, in order to get into the hash. Each timestamp includes the previous timestamp in its hash, forming a chain, with each additional timestamp reinforcing the ones before it.</string>
    <string name="title_3">3. Timestamp Server</string>
    <string name="title_4">4. Proof-of-Work</string>
    <string name="title_7">7. Reclaiming Disk Space</string>
    <string name="text_7_0">\tOnce the latest transaction in a coin is buried under enough blocks, the spent transactions before it can be discarded to save disk space. To facilitate this without breaking the block\'s hash, transactions are hashed in a Merkle Tree [7][2][5], with only the root included in the block\'s hash. Old blocks can then be compacted by stubbing off branches of the tree. The interior hashes do not need to be stored.</string>
    <string name="text_7_1">\tA block header with no transactions would be about 80 bytes. If we suppose blocks are generated every 10 minutes, 80 bytes * 6 * 24 * 365 = 4.2MB per year. With computer systems typically selling with 2GB of RAM as of 2008, and Moore\'s Law predicting current growth of 1.2GB per year, storage should not be a problem even if the block headers must be kept in memory.</string>
    <string name="title_11">11. Calculations</string>
    <string name="text_11_0">\tWe consider the scenario of an attacker trying to generate an alternate chain faster than the honest chain. Even if this is accomplished, it does not throw the system open to arbitrary changes, such as creating value out of thin air or taking money that never belonged to the attacker. Nodes are not going to accept an invalid transaction as payment, and honest nodes will never accept a block containing them. An attacker can only try to change one of his own transactions to take back money he recently spent.\n\tThe race between the honest chain and an attacker chain can be characterized as a Binomial Random Walk. The success event is the honest chain being extended by one block, increasing its lead by +1, and the failure event is the attacker\'s chain being extended by one block, reducing the gap by -1.\n\tThe probability of an attacker catching up from a given deficit is analogous to a Gambler\'s Ruin problem. Suppose a gambler with unlimited credit starts at a deficit and plays potentially an infinite number of trials to try to reach breakeven. We can calculate the probability he ever reaches breakeven, or that an attacker ever catches up with the honest chain, as follows [8]: \n\np = probability an honest node finds the next block \nq = probability the attacker finds the next block \nqz = probability the attacker will ever catch up from z blocks behind</string>
    <string name="text_11_1"><![CDATA[\tGiven our assumption that p > q, the probability drops exponentially as the number of blocks the attacker has to catch up with increases. With the odds against him, if he doesn\'t make a lucky lunge forward early on, his chances become vanishingly small as he falls further behind.\n\t We now consider how long the recipient of a new transaction needs to wait before being sufficiently certain the sender can\'t change the transaction. We assume the sender is an attacker who wants to make the recipient believe he paid him for a while, then switch it to pay back to himself after some time has passed. The receiver will be alerted when that happens, but the sender hopes it will be too late.\n\t The receiver generates a new key pair and gives the public key to the sender shortly before signing. This prevents the sender from preparing a chain of blocks ahead of time by working on it continuously until he is lucky enough to get far enough ahead, then executing the transaction at that moment. Once the transaction is sent, the dishonest sender starts working in secret on a parallel chain containing an alternate version of his transaction.\n\t The recipient waits until the transaction has been added to a block and z blocks have been linked after it. He doesn\'t know the exact amount of progress the attacker has made, but assuming the honest blocks took the average expected time per block, the attacker\'s potential progress will be a Poisson distribution with expected value:]]></string>
    <string name="text_11_2">\tTo get the probability the attacker could still catch up now, we multiply the Poisson density for each amount of progress he could have made by the probability he could catch up from that point:</string>
    <string name="text_11_3">\tRearranging to avoid summing the infinite tail of the distribution...</string>
    <string name="text_11_4">\tConverting to C code...</string>
    <string name="code_11_0"><![CDATA[#include <math.h>\n double AttackerSuccessProbability(double q, int z)\n {\n \tdouble p = 1.0 - q;\n \tdouble lambda = z * (q / p);\n \tdouble sum = 1.0;\n \tint i, k;\n \tfor (k = 0; k <= z; k++)\n \t{\n \t\tdouble poisson = exp(-lambda);\n \t\tfor (i = 1; i <= k; i++)\n \t\t\tpoisson *= lambda / i;\n \t\tsum -= poisson * (1 - pow(q / p, z - k));\n \t}\n \treturn sum;\n }\n]]></string>
    <string name="text_11_5">\tRunning some results, we can see the probability drop off exponentially with z.</string>
    <string name="code_11_1">\n\n\tq=0.1 \tz=0 P=1.0000000\n \tz=1 P=0.2045873\n \tz=2 P=0.0509779\n \tz=3 P=0.0131722\n \tz=4 P=0.0034552\n \tz=5 P=0.0009137\n \tz=6 P=0.0002428\n \tz=7 P=0.0000647\n \tz=8 P=0.0000173\n \tz=9 P=0.0000046\n \tz=10 P=0.0000012\n\n \tq=0.3\n \tz=0 P=1.0000000\n \tz=5 P=0.1773523\n \tz=10 P=0.0416605\n \tz=15 P=0.0101008\n \tz=20 P=0.0024804\n \tz=25 P=0.0006132\n \tz=30 P=0.0001522\n \tz=35 P=0.0000379\n \tz=40 P=0.0000095\n \tz=45 P=0.0000024\n \tz=50 P=0.0000006\n</string>
    <string name="text_11_6">\tSolving for P less than 0.1%...</string>
    <string name="code_11_2"><![CDATA[\n\n\tP < 0.001\n \tq=0.10 z=5\n \tq=0.15 z=8\n \tq=0.20 z=11\n \tq=0.25 z=15\n \tq=0.30 z=24\n \tq=0.35 z=41\n \tq=0.40 z=89\n \tq=0.45 z=340]]></string>
</resources>