<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_7" />

    <TextView
        style="@style/simple_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_7_0" />

    <ImageView
        style="@style/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/image_7_0" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        />

    <ImageView
        style="@style/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/image_7_1" />

    <TextView
        style="@style/simple_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_7_1" />



</LinearLayout>